fixing the spacing again. didn't work last time.

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -36,7 +36,7 @@ img {
     background-color: lightgray;
 }
 
-ul > li {
+.navbar-nav > ul > li {
     justify-content: space-around;
 }
 
